--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 # Project exclude paths
-/cmake-build-debug/CMakeFiles/
-/cmake-build-release/CMakeFiles/
+cmake-build-debug
+cmake-build-release
+.idea
